Fix message text overflow bug

--- a/src/assets/styles/Components.sass
+++ b/src/assets/styles/Components.sass
@@ -521,6 +521,7 @@
 .base-message
   @extend .align-items-start
   padding: 1.5rem !important
+  min-height: unset !important
   &:not(.success, .warning, .error)
     @extend .no-shadow, .border
     &.inverted
